--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/nhatnv6767/learning-nodejs#readme",
   "dependencies": {
+    "ejs": "3.1.6",
     "express": "4.17.1"
   }
 }
