--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/nhatnv6767/learning-nodejs#readme",
   "dependencies": {
+    "@babel/core": "7.15.5",
+    "@babel/node": "7.15.4",
+    "@babel/preset-env": "7.15.6",
+    "body-parser": "1.19.0",
     "ejs": "3.1.6",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "nodemon": "2.0.12"
   }
 }
